=== master

* Support on_duplicate_columns={raise,warn} parameter in connection URL when using duplicate_columns_handler extension (jeremyevans)

* Add transaction_connection_validator extension for retrying transactions on new connection if ther is a disconnect error when starting transaction (jeremyevans)

=== 5.76.0 (2024-01-01)

* Improve performance and flexibility of regexp matching in sqlite adapter (paddor) (#2108)

* Support SQL::Identifier for Database#tables :schema option values on PostgreSQL (jeremyevans)

* Support generating rcte queries using UNION or UNION ALL in the rcte plugin (jonathanfrias) (#2107)

* Make Database#table_exists? on PostgreSQL handle lock or statement timeout errors as evidence the table exists (jeremyevans) (#2106)

* Work around DateTime.jd fractional second bug on JRuby in named_timezones extension (jeremyevans)

* Support fractional times and timestamps on SQLAnywhere (jeremyevans)

* Make round_timestamps extension use Dataset#sqltime_precision for rounding Sequel::SQLTime values (jeremyevans)

* Remove special handling of %N modifier in Dataset#default_timestamp_format (jeremyevans)

* Add Dataset#default_time_format private method, for adapters to override for time (not timestamp) formatting (jeremyevans)

* Remove Dataset#format_timestamp_offset private method (jeremyevans)

* Remove special handling of %z modifier in Dataset#default_timestamp_format (jeremyevans)

* Add Dataset#literal_date_or_time, for simpler use by bound argument code (jeremyevans)

* Add auto_cast_date_and_time extension, for casting date and time values using SQL standard functions (jeremyevans)

=== 5.75.0 (2023-12-01)

* Make any_not_empty? extension support passing pattern argument to any? (jeremyevans) (#2100)

* Respect :skip_transaction option in PostgreSQL Dataset#paged_each (jeremyevans) (#2097)

* Add TimestampMigrator.run_single to run a single migration file up or down (opya, jeremyevans) (#2093)
