@@ -70,8 +70,10 @@ class Sequel::ConnectionPool
       else
         pc = if opts[:single_threaded]
           opts[:servers] ? :sharded_single : :single
-        #elsif RUBY_VERSION >= '3.2' # SEQUEL6 or maybe earlier
-        #  opts[:servers] ? :sharded_timed_queue : :timed_queue
+        # :nocov:
+        elsif RUBY_VERSION >= '3.4' # SEQUEL6 or maybe earlier switch to 3.2
+          opts[:servers] ? :sharded_timed_queue : :timed_queue
+        # :nocov:
         else
           opts[:servers] ? :sharded_threaded : :threaded
         end
